--- a/index.html
+++ b/index.html
@@ -42,17 +42,24 @@
     <script>
         // Array of information
         const textArray = [
-            "Princess you are so beautiful, you make the moon jealous of your beauty.",
-            "You have such a beautiful smile, whenever you smile, it always puts a smile on my face.",
-            "Whenever I'm with you, I smile so much, more than I ever have in my life. You really do have a vibe or aura then that makes me so comfortable and peaceful with you.",
-            "Your eyes shine so bright they make the stars in the night sky look dull. Your presence in my life is like all that constellations and stars on a new moon night sky.",
-            "The amount of times you have made me speechless. I look at you and all i think is damn, this is all mine. she is all mine. This girl right here is my girlfriend. She is so perfect and amazing and she isn't even aware of how perfect she is.",
-            "Darling, I know somethings you think you screwed up or that you messed up, and i know while I may brish it aside and tell you it's okay, your consciousness will still beat you about it. Princess i really dont know what i can do or say to help with that, but no matter what, i will still love you regardless. Nothing you can do will make me mad at you or yell at you. Trust me you have not done anything stupid as of so far. I got you Princess.",
-            "I know I'm not the easiest to deal with, especially since im not used to receiving anything, so this whole thing is new to me. Because of your patience and understanding dealing with me, I appreciate you so much.",
-            "It's been what 2 months and something, and within that time, I have felt more loved and cared for than I have all my life. Thank you princess. I love you so much.",
-            "I know you are scared of doing something of messing up and losing me, but princess, that is literally not possible atp. you are stuck. nothing you can do will mess up or make me leave. I have discovered so many things about you and I will continue to be understanding with you about everything as I always have. I got you love. I'm here for you regardless of what. We will talk shit out and come to an understanding or I'll try to find a solution. You deserve nothing but the world and I do not want to lose you princess. You are the best thing in my life.",
-            "Over this period of time, I've seen and discovered so many things and/ versions of you and I must say, your personalities are interesting and funny. I love em all. Life is truly an adventure with you in it my love. An adventure worth experiencing and an adventure i want to last a lifetime. I love you princess."
-        ];
+            "You are so beautiful, adorable, and freaking hot."
+            "You have a kind, caring, and loving personality."
+            "You're a big softie."
+            "You're also a big orange cat, and I really love that about you."
+            "You're sassy as hell."
+            "You're freaky as hell."
+            "You listen to me, and I feel so loved and genuinely cared for when I'm around you."
+            "You're clingy, and I love that."
+            "You don't hide your feelings, and I love that about you."
+            "You're stubborn, yes, but I still love you."
+            "The way you speak alone... ugh, I love it."
+            "You're really mature for your age, and I love that."
+            "You're calm, but when you're pissed, it's also interesting."
+            "Your smile (your genuine smile) is so adorable; it makes me feel warm and fuzzy every time I see you smile."
+            "You're so adorable every time you giggle and laugh."
+            "You're so cute when you're nervous."
+
+            ];
 
         function generateRandomText() {
             // Generate a random number between 1 and 10
